# Project_ROCR

./: .travis.yml  CMakeLists.txt  README.md  output.urdf  package.xml  video_link.txt
rocr/: .travis.yml  CMakeLists.txt  LICENSE  README.md  output.urdf  package.xml
rocr/config/: config_controllers.yaml  config_file.rviz  diff_drive.yaml  joint_names_rocr.yaml
rocr/doxygen/: Doxyfile
rocr/doxygen/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  teleop_8cpp.html  teleop_8cpp__incl.map  teleop_8cpp__incl.md5
rocr/doxygen/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  refman.tex  teleop_8cpp.tex  teleop_8cpp__incl.md5
rocr/include/rocr/: teleop.hpp
rocr/launch/: empty_world.launch  launch_test.launch  new.launch  rocr_bot.launch  rocr_mapping.launch  rocr_teleop.launch
rocr/meshes/: base_link.STL  link_front_left_axle.STL  link_front_left_rim.STL  link_front_left_tyre.STL  link_front_right_axle.STL  link_front_right_rim.STL  link_front_right_tyre.STL  link_left_rim.STL  link_left_tyre.STL  link_pinion.STL  link_rear_axle.STL  link_rear_left_rim.STL  link_rear_left_tyre.STL  link_rear_right_rim.STL  link_rear_right_tyre.STL  link_rear_wheel.STL  link_right_arm.STL  object_blue.STL
rocr/model/arm bot/: Assem2.SLDASM  base plate.SLDPRT  front_axle.SLDPRT  left_arm_final.SLDPRT  pinion.SLDPRT  tyre.SLDPRT
rocr/model/conveyor bot/: belt_collection.SLDPRT  body_collection.SLDPRT  (+3 more)
rocr/results/: cppcheck.txt  cpplint.txt
rocr/src/: main.cpp  teleop.cpp  teleop_twist_keyboard.cpp  tf_listener.cpp
rocr/test/: main.cpp  rocr_dummy_test.cpp  rocr_test.cpp
rocr/urdf/: object_blue.urdf  object_green.urdf  object_red.urdf  rocr.csv  rocr.urdf  rocr_integration.urdf.xacro  ydlidar.urdf
rocr/world/: turtlebot3_house.world
(+45 files in other folders)
