<?xml version="1.0"?>
<package format="2">
  <name>rocr</name>
  <version>1.0.0</version>
  <description>The rocr package</description>

  <maintainer email="markj11@umd.edu">Markosej11</maintainer>
  <maintainer email="vsood@umd.edu">Vivek Sood</maintainer>
  <maintainer email="ykulkarn@umd.edu">Yash Mandar Kulkarni</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>